{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 166,
  "lineage": "75db56e8-263d-b394-5025-08f41bcb6976",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:957117875303:internet-gateway/igw-0f2a4f3fe42fdd0a6",
            "id": "igw-0f2a4f3fe42fdd0a6",
            "owner_id": "957117875303",
            "tags": {
              "Name": "financial-platform-igw"
            },
            "tags_all": {
              "Name": "financial-platform-igw"
            },
            "vpc_id": "vpc-0052c8d1752502d63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f2a4f3fe42fdd0a6",
            "id": "r-rtb-0d6b514cf1876bb7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d6b514cf1876bb7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:957117875303:route-table/rtb-0d6b514cf1876bb7a",
            "id": "rtb-0d6b514cf1876bb7a",
            "owner_id": "957117875303",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "financial-platform-public-rt"
            },
            "tags_all": {
              "Name": "financial-platform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0052c8d1752502d63"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00309d534541050e7",
            "route_table_id": "rtb-0d6b514cf1876bb7a",
            "subnet_id": "subnet-00497e5b2a8ad07eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc463c60336e993a",
            "route_table_id": "rtb-0d6b514cf1876bb7a",
            "subnet_id": "subnet-08fdec6b148800a83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:957117875303:subnet/subnet-00497e5b2a8ad07eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00497e5b2a8ad07eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957117875303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "financial-platform-public-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "financial-platform-public-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0052c8d1752502d63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:957117875303:subnet/subnet-08fdec6b148800a83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fdec6b148800a83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957117875303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "financial-platform-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "financial-platform-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0052c8d1752502d63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:957117875303:vpc/vpc-0052c8d1752502d63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c9aae56f36445e5",
            "default_route_table_id": "rtb-0ce9ec0699294836a",
            "default_security_group_id": "sg-0b10a37bfff68cc0b",
            "dhcp_options_id": "dopt-0b8f95af2fcf8bbac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0052c8d1752502d63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce9ec0699294836a",
            "owner_id": "957117875303",
            "tags": {
              "Name": "financial-platform-vpc"
            },
            "tags_all": {
              "Name": "financial-platform-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}